# sigmo-python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  environment.yml  pyproject.toml  setup.py
benchmarks/datasets/: README.md  ZINC_URLS  query.smarts
cpp/include/sigmo_python/: api.hpp  exceptions.hpp  types.hpp
cpp/src/: api.cpp  module.cpp
docs/: api.md  architecture.md  benchmarks.md  build.md
examples/: README.md  advanced_pipeline.py  basic_usage.py  mock_csr_signatures.py  run_pipeline.py  validation_usage.py  visualization_usage.py
python/sigmo/: README.md  __init__.py  config.py  graph.py  matcher.py  pipeline.py  result.py  utils.py  validation.py  visualize.py
scripts/: build.sh  dev_env.sh
tests/: README.md  conftest.py  prova.py  run_pipeline.py  test_candidates.py  test_graph.py  test_join.py  test_low_level_kernels.py  test_matcher.py  test_pipeline.py  test_signatures.py  test_validation.py  test_validation_against_rdkit.py  test_visualize.py
