[build-system]
requires = [
    "setuptools>=68",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "sigmo"
version = "0.0.1"
description = "Python interface for the SIGMo subgraph isomorphism library"
authors = [
    { name = "Giacomo Favale" }
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest"
]
viz = [
    "networkx",
    "matplotlib",
    "pillow"
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*dpctl\\.tensor is deprecated.*:DeprecationWarning"
]